--- a/simple/index.html
+++ b/simple/index.html
@@ -5,8 +5,21 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <section id="section1" class="section"><a href="#section2" class="scroll">이동</a>안녕하세요.</section>
-    <section id="section2" class="section">반갑습니다.</section>
+    <section id="section1" class="section">
+        <div class="container">
+            <div style="margin-bottom: 10px;">키프리스 + CCPatents = 검색량 <div style="display: inline; padding: 2px;" class="text-wave-down">↓</div style="display: inline;"> 정확도 <span class="text-wave-up">↑</span></div>
+            <div style="width: 50%; margin-left: 25%;">
+                <div class="video-container">
+                    <iframe width="75%" src="https://www.youtube.com/embed/lH-aHi7pb0I?start=27" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" donotallowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="section2" class="section">
+        <div>
+            <p>마이크로소프트 스토어에서 빠르고 안전하게</p>
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
     <script src="script.js"></script>
