--- a/simple/index.html
+++ b/simple/index.html
@@ -67,7 +67,7 @@
 		<div class="container-fluid">
 			<div class="row text-center">
 				<div class="col-12" style="height: 10vh;"></div>
-				<h1 id="_title" class="col-12">키프리스 + CCPatents</h1>
+				<h1 class="col-12"><b>키프리스 + CCPatents</b></h1>
 				<h2 class="col-12 mb-5">정확도 <span style="color: rgb(28, 100, 255);">up</span> 검색량 <span
 						style="color: rgb(255, 83, 60);">down</span></h2>
 
