--- a/simple/index.html
+++ b/simple/index.html
@@ -42,7 +42,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link href="style.css" rel="stylesheet">
+	<link href="style.min.css" rel="stylesheet">
 
 </head>
 
