--- a/simple/index.html
+++ b/simple/index.html
@@ -78,6 +78,7 @@
 					</div>
 				</div>
 				<div class="col-1 col-md-2 col-lg-3"></div>
+				<div class="col-12 text-center pt-3" style="font-size: 1.2rem;">동영상에 설명된 기능 외에도 특허 검색을 위한 <span style="color: rgb(28, 100, 255);">다양한 기능들이 더</span> 있습니다.</div>
 			</div>
 		</div>
 	</section>
