--- a/simple/index.html
+++ b/simple/index.html
@@ -103,7 +103,7 @@
 
 	<!-- Bootstrap core JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="scripts.min.js"></script>
+	<script src="scripts.js"></script>
 </body>
 
 </html>
