--- a/simple/index.html
+++ b/simple/index.html
@@ -51,6 +51,7 @@
 		<a href="https://kr.ccpatents.net">
 			<img src="logo.png" width="100%">
 		</a>
+		<div class="mt-2" style="color: rgb(73, 73, 73);">↑ 더 많은 정보 클릭 ↑</div>
 	</div>
 
 	<div style="position: fixed; bottom: 25px; right: 40px; width: 200px; z-index: 100;">
