--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="usecase" style="position: absolute; top: 30px; right: 20px; z-index: 100;">
             <a class="usecase-item usecase-item-red" style="font-size: 13pt;" data-aos="fade-left" data-aos-duration="1750" href="https://blog.naver.com/ccpatents/221689711006" target="_blank">특허 검색, 직접해야 하는 이유</a>
             <a class="usecase-item usecase-item-red" style="font-size: 13pt;" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221714991507" target="_blank">검색식을 사용해야 하는 이유</a>
-            <a class="usecase-item usecase-item-red text-wave-h" style="font-size: 13pt;" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221828543144" target="_blank">내가 직접 특허 출원을?</a>
+            <a class="usecase-item usecase-item-red" style="font-size: 13pt;" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="500" href="https://blog.naver.com/ccpatents/221828543144" target="_blank">내가 직접 특허 출원을?</a>
           </div>
         </div>
       </div>
