--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <!-- Masthead -->
   <header class="masthead">
     <div class="overlay"></div>
-    <div class="container-fluid h-100 px-0">
+    <div class="container-fluid px-0">
       <div class="row no-gutters h-100 align-items-center justify-content-center text-center align-self-baseline">
         <div class="col-12 pt-md-5 mt-md-5 pt-lg-0 mt-lg-0">
           <img class="d-none d-lg-block img-center mb-4 px-0" src="img/icon2.png" style="width: 65px;" />
